# onnx_bench

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  check.py  check_prec.sh  convert_mixed.py  cuda_runtime_api_test.cu  dataset.h  dataset_test.cc  demo.py  ifx_main.cc  ifx_main.cu  ifx_run_npz.cc  ifx_sess.h  json_to_npz.py  main.cc  memcpy_test.cu  memuse.h  ort.h  prune.py  simple_demo.cc
cmake/: cnpy.cmake  gflags.cmake  glog.cmake  gtest.cmake  jsoncpp.cmake  third_party.cmake
convert/: .style.yapf  torch2onnx.py
core/: core.h
cuda_hook/: CMakeLists.txt  cuda_hook.h  gen_code.py
onnx_bench/: CMakeLists.txt  main.cc  onnx_bench.cc  ort.h  simple_demo.cc
python/: demo.py  panel_demo.py  sess.py  tidal_demo.py
test/: CMakeLists.txt  gtest_main.cc  submit_multi_kernel.cu  test_core.cc  test_trt.cc  test_trt_net.cc
test/json_dataset/: 1.json  2.json  3.json  list.txt
tools/cache_generation/: README.md  check_res.py  metric.proto  run_all_model.py
trt/: CMakeLists.txt  trt_api.cc  trt_api.h  trt_device.h  trt_engine.cc  trt_engine.h  trt_inference.cc  trt_inference.h  trt_logger.h  trt_net.cc  trt_net.h  trt_options.h  trt_utils.cc  trt_utils.h
utils/: barrier.h  cupti_inc.h  dynamic_library.h  memuse.h  nvml.h  nvtx.h  random_value.h  timer.h  util.h
